force-app/main/default/objects/Study_Fee_Matrix__c/Study_Fee_Matrix__c.object-meta.xml
<CustomObject>
    <description>This is to track the matrix configuration for a period and applicable student types.</description>
    <label>Study Fee Matrix</label>
    <nameField>
        <label>Study Fee Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Fee Matrix</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>