force-app/main/default/objects/Study_Fee_Matrix__c/fields/Applicable_Student_Fee_Types__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Student_Fee_Types__c</fullName>
    <label>Applicable Student Fee Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Student_Fee_Types</valueSetName>
    </valueSet>
</CustomField>