force-app/main/default/objects/Study_Fee_Matrix__c/fields/From_Date__c.field-meta.xml
<CustomField>
    <fullName>From_Date__c</fullName>
    <description>The from/start date of the fee matrix.</description>
    <inlineHelpText>The from/start date of the fee matrix.</inlineHelpText>
    <label>From Date</label>
    <type>Date</type>
</CustomField>