force-app/main/default/objects/Study_Fee_Matrix__c/fields/Study_Fee_Config__c.field-meta.xml
<CustomField>
    <fullName>Study_Fee_Config__c</fullName>
    <label>Study Fee Config</label>
    <referenceTo>Study_Fee_Config__c</referenceTo>
    <relationshipLabel>Study Fee Matrix</relationshipLabel>
    <relationshipName>Study_Fee_Matrix</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>