force-app/main/default/objects/Study_Fee_Matrix__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <description>The to/end date of the fee matrix.</description>
    <inlineHelpText>The to/end date of the fee matrix.</inlineHelpText>
    <label>To Date</label>
    <type>Date</type>
</CustomField>