force-app/main/default/objects/Study_Fee_Matrix__c/validationRules/Required_From_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_From_Date</fullName>
    <active>true</active>
    <description>To ensure the from date is populated.</description>
    <errorConditionFormula>ISBLANK(From_Date__c)</errorConditionFormula>
    <errorDisplayField>From_Date__c</errorDisplayField>
    <errorMessage>The From Date is required.</errorMessage>
</ValidationRule>