force-app/main/default/objects/Study_Fee_Matrix__c/validationRules/Required_To_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_To_Date</fullName>
    <active>true</active>
    <description>To ensure the to date is populated.</description>
    <errorConditionFormula>ISBLANK(To_Date__c)</errorConditionFormula>
    <errorDisplayField>To_Date__c</errorDisplayField>
    <errorMessage>The To Date is required.</errorMessage>
</ValidationRule>