force-app/main/default/objects/Study_Fee_Matrix__c/validationRules/Validate_To_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_To_Date</fullName>
    <active>true</active>
    <description>To ensure that the To Date is not earlier than the From Date</description>
    <errorConditionFormula>To_Date__c &lt; From_Date__c</errorConditionFormula>
    <errorDisplayField>To_Date__c</errorDisplayField>
    <errorMessage>The to date must be after the from date.</errorMessage>
</ValidationRule>